add Survey entity update SurveyController fix namespace
